--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cosmic-ai",
   "version": "1.0.0",
-  "description": "Cosmic AI Inspiration Generator",
+  "description": "AI Agent with Cosmic Theme",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,7 +10,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "https-proxy-agent": "^7.0.2"
+    "cors": "^2.8.5"
   }
 }
